--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,5 +10,4 @@
   <%= @game.description %>
 </p>
 
-<%= link_to 'Edit', edit_game_path(@game) %> |
-<%= link_to 'Back', games_path %>
+<%= link_to 'Buy it!', new_subscription_path, class: "btn btn-primary" %>
