--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Subscriptions</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'https://js.stripe.com/v3/', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
